# bash_include

./: AUTHORS  COPYING  Makefile.am  Makefile.default  README  bash_include.pc.in  configure.ac
autotools/: ax_transform.am  common.ac  common.am
autotools/m4/: ax_transform.m4
etc/: Makefile.am
etc/env.d/: 05bash_include.in  Makefile.am
gentoo/bash_include/dev-lang/bash_include/: Manifest  bash_include-0.1.ebuild
gentoo/bash_include/distfiles/: bash_include-0.1.tar.bz2
src/: BOOL  Makefile.am  assert  bash_include.in  basic  err  math  module-template  msg  opt  path  regex  script-template  str  test  var
test/: test-assert.sh  test-err.sh  test-include.sh  test-math.sh  test-msg.sh  test-opt.sh  test-path.sh  test-str.sh  test-test.sh  test-testcase.sh  test-var.sh  tester  testsuite.sh  watch.sh
